added processcap graphics+ethic naming+cope+ratio

--- a/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
@@ -133,11 +133,14 @@
  # /
 
  # --------------- Mechanic
-	sr_tec_machine_processing_empire:0 "Processing Capacity"
-	sr_tec_machine_processing_empire_desc:0 "A macro-computer requires a proper redirection of calculations, processes and data flows; it is the duty of these transmission packets to be properly sorted, refined and depured, ensuring each drone, each tool, each protocol within the collective work in perfect synchrony."
+	sr_tec_machine_processing_local:0 "Processing Capacity"
+	sr_tec_machine_processing_local_desc:0 "A macro-computer requires a proper redirection of calculations, processes and data flows; it is the duty of these transmission packets to be properly sorted, refined and improved, ensuring each drone, each tool, each protocol within the collective work in perfect synchrony."
 
-	sr_tec_machine_processing_empire_redirection:0 "Redirected Processing"
-	sr_tec_machine_processing_empire_redirection_desc:0 "Several protocols have been redirected to empower the planet processing relays, providing specifically charged packets of processing capacity, increasing the output at a local scale."
+	sr_tec_machine_processing_empire:0 "Processing Capacity"
+	sr_tec_machine_processing_empire_desc:0 "A macro-computer requires a proper redirection of calculations, processes and data flows; it is the duty of these transmission packets to be properly sorted, refined and improved, ensuring each drone, each tool, each protocol within the collective work in perfect synchrony."
+
+	sr_tec_machine_processing_redirection:0 "Redirected Processing"
+	sr_tec_machine_processing_redirection_desc:0 "Several protocols have been redirected to empower the planet processing relays, providing specifically charged packets of processing capacity, increasing the output at a local scale."
 
 	building_tec_machine_intranetwork:0 "Intra-Network Core"
 	building_tec_machine_intranetwork_desc:0 "TO DO."
@@ -145,7 +148,7 @@
 
 	building_tec_machine_exonetwork:0 "Exo-Network Core"
 	building_tec_machine_exonetwork_desc:0 "TO DO."
-	building_tec_machine_exonetwork_effect:0 "This £building£ serves as a conduit for the planet £sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!, converting it into £sr_tec_machine_processing_empire_redirection£ §Y$sr_tec_machine_processing_empire_redirection$§!, boosting local £pop£ §HDrone§! and £engineering£ §HAutomation§! §YOutput§!"
+	building_tec_machine_exonetwork_effect:0 "This £building£ serves as a conduit for the planet £sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!, converting it into £sr_tec_machine_processing_redirection£ §Y$sr_tec_machine_processing_redirection$§!, boosting local £pop£ §HDrone§! and £engineering£ §HAutomation§! §YOutput§!"
 
 	building_tec_machine_processcap_effect:0 "£sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§! is a special modifier drones consume for effectivity - excess processing capacity can be redirected to other colonies, self-redirected to the planet or to the collective as an usable resource"
 	building_tec_machine_processcap_1:0 "Processing Server"
