--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -55,16 +55,23 @@
 
 # ETHIC replaces
 # ------------------------------------------------------------
- ethic_egalitarian:0 "Liberal"
- ethic_fanatic_egalitarian:0 "Fanatic Liberal"
+ ethic_egalitarian:0 "Egalitarian"
+ ethic_egalitarian_plural:0 "Egalitarians"
+ ethic_egalitarian_minor:0 "egalitarian"
+ ethic_egalitarian_minor_plural:0 "egalitarians"
+ ethic_egalitarian_adj:0 "Egalitarianism"
+ ethic_egalitarian_adj_minor:0 "egalitarianism"
 
- civic_tooltip_egalitarian:0 "Is some degree of §YLiberal§!"
- civic_tooltip_not_egalitarian:0 "Is not §YLiberal§!"
+ ethic_fanatic_egalitarian:0 "Fanatic $ethic_egalitarian$"
+ ethic_fanatic_egalitarian_plural:0 "Fanatic $ethic_egalitarian_plural$"
+
+ civic_tooltip_egalitarian:0 "Is some degree of §Y$ethic_egalitarian$§!"
+ civic_tooltip_not_egalitarian:0 "Is not §Y$ethic_egalitarian$§!"
 
 # AUTHORITY Replaces
 # ------------------------------------------------------------
  AUTH_HIVE_MIND_ASCENSION_RESTRICTIONS:0 "§ERestriction:§! Cannot follow §HSynthetic Ascension Path§!; Following a §HCybernetic§! ascension path will give the option to replace this authority"
- AUTH_HIVE_MIND_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! organic £pop£ Pops must be assimilated, enslaved, purged or §Hgenetically modified§! to obtain the hive-minded trait, if not §Hempathic§!.\n"
+ AUTH_HIVE_MIND_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! organic £pop£ Pops must be assimilated, enslaved, purged or §Hgenetically modified§! to obtain the hive-minded trait, if not §HEmpathic§!.\n"
  AUTH_HIVE_MIND_GENEMODDING:0 "Can genetically modify §H£pop£ Pops§! to become §HHive Mind§! compatible if §HBiological Ascension Path§! is completed"
 
  # added to machine auth
