--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1204,7 +1204,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_scavenger_plural:0 "Scavengers"
  job_tec_scavenger_desc:0 "Trained to live and thrive in any condition, scavengers dedicate their lives to search and take back to their base any usable material or good found around; what some call trash, they call it treasure."
  job_tec_scavenger_effect_desc:0 "[job_tec_scavenger_effect_desc]"
- job_tec_scavenger_effect_desc_default: "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of £consumer_goods£ §YConsumer Goods§! to generate diverse £trigger_tec_basic_resources£ §YBasic Resources§!."
+ job_tec_scavenger_effect_desc_default:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of £consumer_goods£ §YConsumer Goods§! to generate diverse £trigger_tec_basic_resources£ §YBasic Resources§!."
  job_tec_scavenger_effect_desc_dry:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of £consumer_goods£ §YConsumer Goods§! to find rich £energy£ §YEnergy§! deposits and packets of £volatile_motes£ §YVolatile Motes§! around."
  job_tec_scavenger_effect_desc_wet:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of £consumer_goods£ §YConsumer Goods§! to find rich £food£ §YFood§! deposits and packets of £exotic_gases£ §YExotic Gases§! around."
  job_tec_scavenger_effect_desc_cold:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of £consumer_goods£ §YConsumer Goods§! to find rich £minerals£ §YMineral§! deposits and packets of £rare_crystals£ §YRare Crystals§! around."
@@ -1220,7 +1220,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_scavenger_drone:0 "Scavenger Drone"
  job_tec_scavenger_drone_plural:0 "Scavenger Drones"
  job_tec_scavenger_drone_desc:0 "These drones have incredibly specific skills to sort, navigate and map nearby locations, tracking and obtaining any valuable resource or material found around."
- job_tec_scavenger_drone_effect_desc: "[job_tec_scavenger_drone_effect_desc]"
+ job_tec_scavenger_drone_effect_desc:0 "[job_tec_scavenger_drone_effect_desc]"
  job_tec_scavenger_drone_effect_desc_default:0 "£job_tec_scavenger_drone£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to generate diverse £trigger_tec_basic_resources£ §YBasic Resources§!."
  job_tec_scavenger_drone_effect_desc_dry:0 "£job_tec_scavenger£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to find rich £energy£ §YEnergy§! deposits and packets of £volatile_motes£ §YVolatile Motes§! around."
  job_tec_scavenger_drone_effect_desc_wet:0 "£job_tec_scavenger£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to find rich £food£ §YFood§! deposits and packets of £exotic_gases£ §YExotic Gases§! around."
@@ -1397,8 +1397,8 @@ tec_jump_empty:0 "\n\n"
  mod_job_tec_master_cloner_per_pop:0 "§G+1§! £mod_job_tec_cloner_add£ $job_tec_master_cloner$ Job per $VALUE$ Pops"
  mod_job_tec_master_cloner_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_add£ per $VALUE$ £pop£"
 
-job_tec_master_cloner_effect_t2_desc: "\nAfter the upgrade, £job_tec_cloner£ $job_tec_master_cloner_plural$ will have their assembly increased from §Y3§! to §Y4.5§!"
-job_tec_master_cloner_effect_t3_desc: "\nAfter the upgrade, £job_tec_cloner£ $job_tec_master_cloner_plural$ will have their assembly increased from §Y4.5§! to §Y6§!"
+job_tec_master_cloner_effect_t2_desc:0 "\nAfter the upgrade, £job_tec_cloner£ $job_tec_master_cloner_plural$ will have their assembly increased from §Y3§! to §Y4.5§!"
+job_tec_master_cloner_effect_t3_desc:0 "\nAfter the upgrade, £job_tec_cloner£ $job_tec_master_cloner_plural$ will have their assembly increased from §Y4.5§! to §Y6§!"
 
  job_tec_master_cloner_drone:0 "Master Cloner Drone"
  job_tec_master_cloner_drone_plural:0 "Master Cloner Drones"
@@ -1417,8 +1417,8 @@ job_tec_master_cloner_effect_t3_desc: "\nAfter the upgrade, £job_tec_cloner£ $
  mod_job_tec_master_bioengineer_per_pop:0 "§G+1§! £mod_job_tec_bioengineer_add£ $job_tec_master_bioengineer$ Job per $VALUE$ Pops"
  mod_job_tec_master_bioengineer_per_pop_short:0 "\n§G+1§! £mod_job_tec_bioengineer_add£ per $VALUE$ £pop£"
 
-job_tec_master_bioengineer_effect_t2_desc: "\nAfter the upgrade, £job_tec_bioengineer£ $job_tec_master_bioengineer_plural$ will have their assembly increased from §Y3§! to §Y4.5§!"
-job_tec_master_bioengineer_effect_t3_desc: "\nAfter the upgrade, £job_tec_bioengineer£ $job_tec_master_bioengineer_plural$ will have their assembly increased from §Y4.5§! to §Y6§!"
+job_tec_master_bioengineer_effect_t2_desc:0 "\nAfter the upgrade, £job_tec_bioengineer£ $job_tec_master_bioengineer_plural$ will have their assembly increased from §Y3§! to §Y4.5§!"
+job_tec_master_bioengineer_effect_t3_desc:0 "\nAfter the upgrade, £job_tec_bioengineer£ $job_tec_master_bioengineer_plural$ will have their assembly increased from §Y4.5§! to §Y6§!"
 
  job_tec_master_bioengineer_drone:0 "Master Bioengineer Drone"
  job_tec_master_bioengineer_drone_plural:0 "Master Bioengineer Drones"
@@ -1437,8 +1437,8 @@ job_tec_master_bioengineer_effect_t3_desc: "\nAfter the upgrade, £job_tec_bioen
  mod_job_tec_master_roboticist_per_pop:0 "§G+1§! £mod_job_tec_roboticist_add£ $job_tec_master_roboticist$ Job per $VALUE$ Pops"
  mod_job_tec_master_roboticist_per_pop_short:0 "\n§G+1§! £mod_job_tec_roboticist_add£ per $VALUE$ £pop£"
 
-job_tec_master_roboticist_effect_t2_desc: "\nAfter the upgrade, £job_tec_roboticist£ $job_tec_master_roboticist_plural$ will have their assembly increased from §Y3§! to §Y4.5§!"
-job_tec_master_roboticist_effect_t3_desc: "\nAfter the upgrade, £job_tec_roboticist£ $job_tec_master_roboticist_plural$ will have their assembly increased from §Y4.5§! to §Y6§!"
+job_tec_master_roboticist_effect_t2_desc:0 "\nAfter the upgrade, £job_tec_roboticist£ $job_tec_master_roboticist_plural$ will have their assembly increased from §Y3§! to §Y4.5§!"
+job_tec_master_roboticist_effect_t3_desc:0 "\nAfter the upgrade, £job_tec_roboticist£ $job_tec_master_roboticist_plural$ will have their assembly increased from §Y4.5§! to §Y6§!"
 
  job_tec_master_replicator_drone:0 "Master Replicator Drone"
  job_tec_master_replicator_drone_plural:0 "Master Replicator Drones"
@@ -3482,17 +3482,19 @@ planet_tec_integrated:0 "Integrated Individuals"
 planet_maintenancedrones:0 "Maintenance Drones"
 
 
-private_hired: "Private/Hired"
-mod_tec_hired_job_base_production_mult: "Base Production from £job£ $private_hired$ Jobs"
-mod_tec_hired_job_base_upkeep_mult: "Base Upkeep from £job£ $private_hired$ Jobs"
-mod_tec_hired_job_trade_add: "$tec_loc_trade_value$ from £job£ $private_hired$ Jobs"
+private_hired:0 "Private/Hired"
+mod_tec_hired_job_base_production_mult:0 "Base Production from £job£ $private_hired$ Jobs"
+mod_tec_hired_job_base_upkeep_mult:0 "Base Upkeep from £job£ $private_hired$ Jobs"
+mod_tec_hired_job_trade_add:0 "$tec_loc_trade_value$ from £job£ $private_hired$ Jobs"
 
-mod_tec_branch_building_base_production_mult: "Base Production from $BRANCH_OFFICE_BUILDINGS$"
+mod_tec_branch_building_base_production_mult:0 "Base Production from $BRANCH_OFFICE_BUILDINGS$"
 
-mod_tec_ruler_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $RULERS$"
-mod_tec_specialist_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $SPECIALISTS$"
-mod_tec_worker_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $WORKERS$"
-mod_tec_pop_lifestyle_trade_value_add: "$tec_loc_trade_value$ from £pop£ Pops"
+mod_tec_ruler_lifestyle_trade_value_add:0 "$tec_loc_trade_value$ from $RULERS$"
+mod_tec_specialist_lifestyle_trade_value_add:0 "$tec_loc_trade_value$ from $SPECIALISTS$"
+mod_tec_worker_lifestyle_trade_value_add:0 "$tec_loc_trade_value$ from $WORKERS$"
+mod_tec_pop_lifestyle_trade_value_add:0 "$tec_loc_trade_value$ from £pop£ Pops"
+
+mod_tec_planet_automation_mult:0 "£trigger_tec_automation£ Automated Resources Production"
 
 # Organise
 
@@ -3616,9 +3618,9 @@ mod_tec_pop_lifestyle_trade_value_add: "$tec_loc_trade_value$ from £pop£ Pops"
  tec_authoritarian_statecraft_building_effect:0 "This £building£ Building causes the §YEmpire Ruler§! gain a moderate amount of experience each year, based on the total population of the planet.\n"
 
 # lib
- building_tec_tr_lib_parliament:0 "Imperial Parliament"
- building_tec_tr_lib_parliament_desc:0 "A"
- tec_liberal_statecraft_building_effect:0 "This £building£ Building increases the £influence£ §YInfluence§! gain of non-repressed Factions.\n"
+ building_tec_tr_egal_parliament:0 "Imperial Parliament"
+ building_tec_tr_egal_parliament_desc:0 "A"
+ tec_egalitarian_statecraft_building_effect:0 "This £building£ Building increases the £influence£ §YInfluence§! gain of non-repressed Factions.\n"
 
 # green
  building_tec_tr_eco_sculptor:0 "Planetary Sculptor"
@@ -3658,10 +3660,10 @@ mod_tec_pop_lifestyle_trade_value_add: "$tec_loc_trade_value$ from £pop£ Pops"
  building_tec_tr_eli_academy_desc:0 "This institution, built upon the concept of the best of the best serving the empire, provides the needed formation for the ambitious, cunning and valid who can afford the most complete education."
  tec_elitist_statecraft_building_effect:0 "This £building£ Building allow §YEmpire Leaders§! to gain special traits when they level up, reinforcing their position.\n"
 
-# egal
- building_tec_tr_ega_repository:0 "Repository of the Many"
- building_tec_tr_ega_repository_desc:0 "A recopilation of all the knowledge stored by the historians, researchers and scholars of this empire, available for every citizen, no matter the social status or fortune, for the good of everyone."
- tec_egalitarian_statecraft_building_effect:0 "This £building£ Building will provide all leaders with small amounts of §YExperience§!, scaling up with the number of §YScholars§! in the empire.\n"
+# pluralist
+ building_tec_tr_pluralist_repository:0 "Repository of the Many"
+ building_tec_tr_pluralist_repository_desc:0 "A recopilation of all the knowledge stored by the historians, researchers and scholars of this empire, available for every citizen, no matter the social status or fortune, for the good of everyone."
+ tec_pluralist_statecraft_building_effect:0 "This £building£ Building will provide all leaders with small amounts of §YExperience§!, scaling up with the number of §YScholars§! in the empire.\n"
 
 # Specific gestalt variants
 # Hive
@@ -3719,114 +3721,114 @@ mod_tec_pop_upkeep_base_add:0 "Base £pop£ Pop Upkeep"
 
 # Admin locs
 
-job_tec_mecha_priest_icon: "£job_tec_mecha_priest£"
-job_tec_paperwork_priest_icon: "£job_tec_paperwork_priest£"
-job_tec_atom_priest_icon: "£job_tec_atom_priest£"
-job_tec_paranormal_priest_icon: "£job_tec_paranormal_priest£"
+job_tec_mecha_priest_icon:0 "£job_tec_mecha_priest£"
+job_tec_paperwork_priest_icon:0 "£job_tec_paperwork_priest£"
+job_tec_atom_priest_icon:0 "£job_tec_atom_priest£"
+job_tec_paranormal_priest_icon:0 "£job_tec_paranormal_priest£"
 
-job_manager_icon: "£job_manager£"
-job_bureaucrat_icon: "£job_bureaucrat£"
-job_tec_ai_operat3686or_icon: "£job_tec_ai_operator£"
-job_tec_ai_ordinator_icon: "£job_tec_ai_ordinator£"
+job_manager_icon:0 "£job_manager£"
+job_bureaucrat_icon:0 "£job_bureaucrat£"
+job_tec_ai_operat3686or_icon:0 "£job_tec_ai_operator£"
+job_tec_ai_ordinator_icon:0 "£job_tec_ai_ordinator£"
 
-job_tec_resonance_drone_icon: "£job_tec_resonance_drone£"
-job_synapse_drone_icon: "£job_synapse_drone£"
-job_tec_network_drone_icon: "£job_tec_network_drone£"
+job_tec_resonance_drone_icon:0 "£job_tec_resonance_drone£"
+job_synapse_drone_icon:0 "£job_synapse_drone£"
+job_tec_network_drone_icon:0 "£job_tec_network_drone£"
 
 
-tec_job_priest_and_admin_with_icon: "[GetPriestIcon] [GetPriest] and [GetAdministratorNoPriestIcon] [GetAdministratorNoPriest]"
+tec_job_priest_and_admin_with_icon:0 "[GetPriestIcon] [GetPriest] and [GetAdministratorNoPriestIcon] [GetAdministratorNoPriest]"
 
-tec_job_priest_and_admin_plural_with_icon: "[GetPriestIcon] [GetPriestPlural] and [GetAdministratorNoPriestIcon] [GetAdministratorNoPriestPlural]"
+tec_job_priest_and_admin_plural_with_icon:0 "[GetPriestIcon] [GetPriestPlural] and [GetAdministratorNoPriestIcon] [GetAdministratorNoPriestPlural]"
 
-tec_job_admin_with_icon: "[GetAdministratorNoPriestIcon] [GetAdministratorNoPriest]"
+tec_job_admin_with_icon:0 "[GetAdministratorNoPriestIcon] [GetAdministratorNoPriest]"
 
-tec_job_admin_plural_with_icon: "[GetAdministratorNoPriestIcon] [GetAdministratorNoPriestPlural]"
+tec_job_admin_plural_with_icon:0 "[GetAdministratorNoPriestIcon] [GetAdministratorNoPriestPlural]"
 
-tec_job_synapse_with_icon: "[GetSynapseIcon] [GetSynapse]"
+tec_job_synapse_with_icon:0 "[GetSynapseIcon] [GetSynapse]"
 
-tec_job_synapse_plural_with_icon: "[GetSynapseIcon] [GetSynapsePlural]"
+tec_job_synapse_plural_with_icon:0 "[GetSynapseIcon] [GetSynapsePlural]"
 
 
 # Eco cats
-leader_rulers: "Rulers"
-leader_envoys: "Envoys"
+leader_rulers:0 "Rulers"
+leader_envoys:0 "Envoys"
 
 # Jobs WIP
 
-job_tec_psychohistorian: ""
-job_tec_psychohistorian_desc: ""
-job_tec_psychohistorian_effect_desc: ""
-mod_job_tec_psychohistorian_add: ""
+job_tec_psychohistorian:0 ""
+job_tec_psychohistorian_desc:0 ""
+job_tec_psychohistorian_effect_desc:0 ""
+mod_job_tec_psychohistorian_add:0 ""
 
-job_tec_technomancer: ""
-job_tec_technomancer_desc: ""
-job_tec_technomancer_effect_desc: ""
-mod_job_tec_technomancer_add: ""
+job_tec_technomancer:0 ""
+job_tec_technomancer_desc:0 ""
+job_tec_technomancer_effect_desc:0 ""
+mod_job_tec_technomancer_add:0 ""
 
-job_tec_starseeker: ""
-job_tec_starseeker_desc: ""
-job_tec_starseeker_effect_desc: ""
-mod_job_tec_starseeker_add: ""
+job_tec_starseeker:0 ""
+job_tec_starseeker_desc:0 ""
+job_tec_starseeker_effect_desc:0 ""
+mod_job_tec_starseeker_add:0 ""
 
-job_tec_psi_researcher: ""
-job_tec_psi_researcher_desc: ""
-job_tec_psi_researcher_effect_desc: ""
-mod_job_tec_psi_researcher_add: ""
+job_tec_psi_researcher:0 ""
+job_tec_psi_researcher_desc:0 ""
+job_tec_psi_researcher_effect_desc:0 ""
+mod_job_tec_psi_researcher_add:0 ""
 
-job_tec_bio_researcher: ""
-job_tec_bio_researcher_desc: ""
-job_tec_bio_researcher_effect_desc: ""
-mod_job_tec_bio_researcher_add: ""
+job_tec_bio_researcher:0 ""
+job_tec_bio_researcher_desc:0 ""
+job_tec_bio_researcher_effect_desc:0 ""
+mod_job_tec_bio_researcher_add:0 ""
 
-job_tec_mecha_researcher: ""
-job_tec_mecha_researcher_desc: ""
-job_tec_mecha_researcher_effect_desc: ""
-mod_job_tec_mecha_researcher_add: ""
+job_tec_mecha_researcher:0 ""
+job_tec_mecha_researcher_desc:0 ""
+job_tec_mecha_researcher_effect_desc:0 ""
+mod_job_tec_mecha_researcher_add:0 ""
 
-job_tec_starseeker_priest: ""
-job_tec_starseeker_priest_desc: ""
-job_tec_starseeker_priest_effect_desc: ""
-mod_job_tec_starseeker_priest_add: ""
+job_tec_starseeker_priest:0 ""
+job_tec_starseeker_priest_desc:0 ""
+job_tec_starseeker_priest_effect_desc:0 ""
+mod_job_tec_starseeker_priest_add:0 ""
 
-job_tec_cycle_priest: ""
-job_tec_cycle_priest_desc: ""
-job_tec_cycle_priest_effect_desc: ""
-mod_job_tec_cycle_priest_add: ""
+job_tec_cycle_priest:0 ""
+job_tec_cycle_priest_desc:0 ""
+job_tec_cycle_priest_effect_desc:0 ""
+mod_job_tec_cycle_priest_add:0 ""
 
-job_tec_mentat_priest: ""
-job_tec_mentat_priest_desc: ""
-job_tec_mentat_priest_effect_desc: ""
-mod_job_tec_mentat_priest_add: ""
+job_tec_mentat_priest:0 ""
+job_tec_mentat_priest_desc:0 ""
+job_tec_mentat_priest_effect_desc:0 ""
+mod_job_tec_mentat_priest_add:0 ""
 
-job_tec_labrat: ""
-job_tec_labrat_desc: ""
-job_tec_labrat_effect_desc: ""
-mod_job_tec_labrat_add: ""
+job_tec_labrat:0 ""
+job_tec_labrat_desc:0 ""
+job_tec_labrat_effect_desc:0 ""
+mod_job_tec_labrat_add:0 ""
 
-job_tec_diversifier: ""
-job_tec_diversifier_desc: ""
-job_tec_diversifier_effect_desc: ""
-mod_job_tec_diversifier_add: ""
+job_tec_diversifier:0 ""
+job_tec_diversifier_desc:0 ""
+job_tec_diversifier_effect_desc:0 ""
+mod_job_tec_diversifier_add:0 ""
 
-job_tec_singularity_researcher: ""
-job_tec_singularity_researcher_desc: ""
-job_tec_singularity_researcher_effect_desc: ""
-mod_job_tec_singularity_researcher_add: ""
+job_tec_singularity_researcher:0 ""
+job_tec_singularity_researcher_desc:0 ""
+job_tec_singularity_researcher_effect_desc:0 ""
+mod_job_tec_singularity_researcher_add:0 ""
 
-job_tec_astrologer: ""
-job_tec_astrologer_desc: ""
-job_tec_astrologer_effect_desc: ""
-mod_job_tec_astrologer_add: ""
+job_tec_astrologer:0 ""
+job_tec_astrologer_desc:0 ""
+job_tec_astrologer_effect_desc:0 ""
+mod_job_tec_astrologer_add:0 ""
 
-job_tec_omniguard: ""
-job_tec_omniguard_desc: ""
-job_tec_omniguard_effect_desc: ""
-mod_job_tec_omniguard_add: ""
+job_tec_omniguard:0 ""
+job_tec_omniguard_desc:0 ""
+job_tec_omniguard_effect_desc:0 ""
+mod_job_tec_omniguard_add:0 ""
 
 # Building wips
 
-building_tec_proto_capital: ""
-building_tec_proto_capital_desc: ""
+building_tec_proto_capital:0 ""
+building_tec_proto_capital_desc:0 ""
 
-building_tec_proto_major_capital: ""
-building_tec_proto_major_capital_desc: ""
+building_tec_proto_major_capital:0 ""
+building_tec_proto_major_capital_desc:0 ""
