--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -111,7 +111,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 	# by xamot II "This society believes that a revolutionary vanguard party, mostly recruited from the working class, should lead the political campaign, because it is the only way that the proletariat can successfully achieve the permanent revolution. They are ready and willing to root out any counterrevolutionaries that may seek to undermine the state."
  civic_tooltip_tec_socialguards_effects:0 "TO DO £building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_procurator£ §Y$job_tec_procurator_plural$§!.\n- $job_tec_procurator_effect_desc$\n\n"
 
- # Liberals
+ # Egalitarian
  civic_tec_senators:0 "Senatorial Diligence"
  civic_tec_senators_desc:0 "TO DO."
  civic_tooltip_tec_senators_effects:0 "TO DO £building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_procurator£ §Y$job_tec_procurator_plural$§!.\n- $job_tec_procurator_effect_desc$\n\n"
@@ -1497,24 +1497,22 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
  civic_tooltip_not_capitalism:0 "Is not §YCompetitive§!" 
  civic_tooltip_elitist:0 "Is some degree of §YElitist§!"
  civic_tooltip_not_elitist:0 "Is not §YElitist§!" 
- civic_tooltip_pluralist:0 "Is some degree of §YEgalitarian§!"
- civic_tooltip_not_pluralist:0 "Is not §YEgalitarian§!" 
- civic_tooltip_egalitarian_now_liberal:0 "Is some degree of §YLiberal§!"
- civic_tooltip_not_egalitarian_now_liberal:0 "Is not §YLiberal§!"
+ civic_tooltip_pluralist:0 "Is some degree of §YPluralist§!"
+ civic_tooltip_not_pluralist:0 "Is not §YPluralist§!" 
 
 
- civic_tooltip_industrial_or_green:0 "Is some degree of §YIndustrialist§! or §YEcologist§!"
- civic_tooltip_fanatic_industrial_or_green:0 "Is §YFanatic Industrialist§! or §YFanatic Ecologist§!"
- civic_tooltip_industrial_or_materialist:0 "Is some degree of §YIndustrialist§! or §YMaterialist§!"
+ civic_tooltip_industrial_or_green:0 "Is some degree of §Y$ethic_industrial$§! or §Y$ethic_green$§!"
+ civic_tooltip_fanatic_industrial_or_green:0 "Is §Y$ethic_fanatic_industrial$§! or §Y$ethic_fanatic_green$§!"
+ civic_tooltip_industrial_or_materialist:0 "Is some degree of §Y$ethic_industrial$§! or §YMaterialist§!"
 
- civic_tooltip_socialism_or_pluralist:0 "Is some degree of §YCooperative§! or §YEgalitarian§!"
- civic_tooltip_capitalist_or_elitist:0 "Is some degree of §YCompetitive§! or §YElitist§!"
+ civic_tooltip_socialism_or_pluralist:0 "Is some degree of §Y$ethic_capitalism$§! or §Y$ethic_pluralist$§!"
+ civic_tooltip_capitalist_or_elitist:0 "Is some degree of §Y$ethic_capitalism$§! or §Y$ethic_elitist$§!"
 
- civic_tooltip_not_industrial_or_overconsumption:0 "Is not §YIndustrialist§! or §YOverconsuming§! Gestalt"
- civic_tooltip_green_or_gestalt:0 "Is some degree of §YEcologist§! or is a §YGestalt consciousness§!"
- civic_tooltip_industrial_or_gestalt:0 "Is some degree of §YIndustrialist§! or is a §YGestalt consciousness§!"
+ civic_tooltip_not_industrial_or_overconsumption:0 "Is not §Y$ethic_industrial$§! or §YOverconsuming§! Gestalt"
+ civic_tooltip_green_or_gestalt:0 "Is some degree of §Y$ethic_green$§! or is a §YGestalt consciousness§!"
+ civic_tooltip_industrial_or_gestalt:0 "Is some degree of §Y$ethic_industrial$§! or is a §YGestalt consciousness§!"
 
- civic_tooltip_egalitarian_or_pluralist:0 "Is some degree of §YLiberal§! or §YEgalitarian§!"
+ civic_tooltip_egalitarian_or_pluralist:0 "Is some degree of §Y$ethic_egalitarian$§! or §Y$ethic_pluralist$§!"
 
  mod_shipclass_colonizer_build_cost_mult: "Colonizer cost"
  mod_rivalries_influence_produces_mult:0 "Rivalry Influence Gain"
