--- a/localisation/english/zz_evolved_diplomacy_l_english.yml
+++ b/localisation/english/zz_evolved_diplomacy_l_english.yml
@@ -41,7 +41,7 @@
  action.14.a.capitalism:0 "New customers? Of course, they will learn how to buy!"
  action.14.a.socialism:0 "We will ensure they are welcome and safe among us."
  action.14.a.elitist:0 "The best of their species will serve us well."
- action.14.a.egalitarian:0 "Soon they will realise they will be treated equally."
+ action.14.a.egalitarian:0 "Soon they will realize they will be treated equally."
 
 # ------------------------------------------------------------
 # Actor
@@ -84,14 +84,14 @@
 # ------------------------------------------------------------
 
  INSULT_PROPOSE_COL_IND:0 "Is the [Root.GetName] even a real nation or just an anarchic gaggle of quarreling individuals? You must forgive me, but your political system, such as it is, makes it hard to tell."
- 02_INSULT_PROPOSE_COL_IND:0 "So who is it that rules your amusing little star nation today? What a quaint notion, to "vote" someone into power! It will inevitably lead to your collapse, of course."
+ 02_INSULT_PROPOSE_COL_IND:0 "So who is it that rules your amusing little star nation today? What a quaint notion, to ''vote'' someone into power! It will inevitably lead to your collapse, of course."
  03_INSULT_PROPOSE_COL_IND:0 "Your democratic ideals are a blight on this galaxy, and so is the [Root.GetName]."
- 04_INSULT_PROPOSE_COL_IND:0 "What a selfish people you are, preferring petty freedoms to order and stability. Liberalism... ha! The [Root.GetName] will not survive the year."
+ 04_INSULT_PROPOSE_COL_IND:0 "What a selfish people you are, preferring petty freedoms to order and stability. $ethic_egalitarian_adj$... ha! The [Root.GetName] will not survive the year."
  01_INSULT_PROPOSE_IND_COL:0 "Your brutal, tyrannical regime will eventually fall, and there will be a reckoning."
  02_INSULT_PROPOSE_IND_COL:0 "Have you even considered the notion of letting your citizens think for themselves? If you are frightened that it would lead to the end of the [Root.GetName]... you are right."
  03_INSULT_PROPOSE_IND_COL:0 "How sad that a authoritarian nation such as the [Root.GetName] can exist. It is an embarrassment to sentient beings everywhere."
  04_INSULT_PROPOSE_IND_COL:0 "The cruel oppression of the people living under the yoke of the [Root.GetName] has to end one day. Your hierarchy will prove your undoing."
- 16_FRIENDLY_GREETING:0 "Your government does a good job of curtailing the worst excesses of Liberalism, [From.GetSpeciesNamePlural]."
+ 16_FRIENDLY_GREETING:0 "Your government does a good job of curtailing the worst excesses of $ethic_egalitarian_adj$, [From.GetSpeciesNamePlural]."
  14_FRIENDLY_GREETING:0 "While we prefer free societies, we cannot deny that your government does a good job of providing stability to your citizens."
 
 
