--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -18,9 +18,9 @@
 
 
  edict_social_engineering:0 "Social Engineering"
- edict_social_engineering_desc:1 "This Fanatic Authoritarian Edict mandates the use of subtle social instruments to reinforce our governing Ethics on the planet.\n\n"
+ edict_social_engineering_desc:1 "This $ethic_fanatic_authoritarian$ Edict mandates the use of subtle social instruments to reinforce our governing Ethics on the planet.\n\n"
  edict_privatization_campaign:1 "Grassroots Administration"
- edict_privatization_campaign_desc:1 "This Liberal and Competitive Edict encourages the individuals closest to the production effort to take increased responsibility.\n\n"
+ edict_privatization_campaign_desc:1 "This $ethic_egalitarian$ and $ethic_capitalism$ Edict encourages the individuals closest to the production effort to take increased responsibility.\n\n"
 
 
  edict_forced_industrialization:0 "Doctrine: Industrial Efficiency"
@@ -118,9 +118,9 @@
  scientific_pragmatism_name:0 "Scientific Pragmatism"
  scientific_pragmatism_desc:0 " " 
  
- scientific_liberal:0 "Spirit of Enlightment"
- scientific_liberal_name:0 "Spirit of Enlightment"
- scientific_liberal_desc:0 " "
+ scientific_egalitarian:0 "Spirit of Enlightment"
+ scientific_egalitarian_name:0 "Spirit of Enlightment"
+ scientific_egalitarian_desc:0 " "
  
  divine_right:0 "Divine Right"
  divine_right_name:0 "Divine Right"
@@ -585,7 +585,7 @@ edict_noesnadaporqueasiagrupo:0 "aa"
  edict_indoctrination_elitist:0 "Indoctrination: Elitism"
  edict_indoctrination_elitist_desc:0 "Will cause unhappiness of §YLabourites§! faction."
 
- edict_indoctrination_pluralist:0 "Indoctrination: Egalitarianism"
+ edict_indoctrination_pluralist:0 "Indoctrination: $ethic_pluralist_adj$"
  edict_indoctrination_pluralist_desc:0 "Will cause unhappiness of §YAristocratic§! faction."
 
  edict_indoctrination_green:0 "Indoctrination: Environmentalism"
@@ -601,7 +601,7 @@ edict_noesnadaporqueasiagrupo:0 "aa"
  edict_indoctrination_materialist_desc:0 "Will cause unhappiness of §YTraditionalists§! faction."
 
  edict_indoctrination_authoritarian:0 "Indoctrination: Totalitarianism"
- edict_indoctrination_authoritarian_desc:0 "Will cause unhappiness of §YProgressivists§! faction."
+ edict_indoctrination_authoritarian_desc:0 "Will cause unhappiness of §YProgressive§! faction."
 
  edict_indoctrination_militarist:0 "Indoctrination: Militarism"
  edict_indoctrination_militarist_desc:0 "Will cause unhappiness of §YProsperity§! faction."
@@ -695,8 +695,8 @@ edict_noesnadaporqueasiagrupo:0 "aa"
 
  authoritarian_evangelist:0 "Authoritarian Admiration"
  fanatic_authoritarian_evangelist:0 "Authoritarian Support"
- egalitarian_evangelist:0 "Liberal Ideals"
- fanatic_egalitarian_evangelist:0 "Egalitarain Anarchists"
+ egalitarian_evangelist:0 "$ethic_egalitarian$ Ideals"
+ fanatic_egalitarian_evangelist:0 "$ethic_egalitarian$ Anarchists"
  militarist_evangelist:0 "Militant Propaganda"
  fanatic_militarist_evangelist:0 "Militant Nationalism"
  pacifist_evangelist:0 "Pacifist Teachings"
@@ -708,7 +708,7 @@ edict_noesnadaporqueasiagrupo:0 "aa"
  xenophobe_evangelist:0 "Xenophobia Stirred"
  fanatic_xenophobe_evangelist: "Xenophobic Panic"
  xenophile_evangelist: "Xenophile Cooperation"
- fanatic_xenophile_evangelist: "Xenophillic Debuachery"
+ fanatic_xenophile_evangelist: "Xenophile Debauchery"
 
  authoritarian_evangelist_desc: "$foreign_influence$"
  fanatic_authoritarian_evangelist_desc: "$foreign_influence$"
@@ -758,10 +758,10 @@ edict_noesnadaporqueasiagrupo:0 "aa"
  fanatic_elitist_evangelist:0 "Rule of the Finest"
  fanatic_elitist_evangelist_desc: "$foreign_influence$"
 
- pluralist_evangelist:0 "Convincing Egalitarianism"
+ pluralist_evangelist:0 "Convincing $ethic_pluralist_adj$"
  pluralist_evangelist_desc: "$foreign_influence$"
 
- fanatic_pluralist_evangelist:0 "Egalitarian Utopia"
+ fanatic_pluralist_evangelist:0 "Pluralist Utopia"
  fanatic_pluralist_evangelist_desc: "$foreign_influence$"
 
 
@@ -875,8 +875,8 @@ policy_goods_policy:0 "Consumer Goods Production"
  xenophobe_ethic_shift:0 "Fostered Xenophobia"
  xenophobe_ethic_shift_desc:0 "This galaxy is full of dangerous creatures and greedy aliens. Suffer not the xeno."
 
- egalitarian_ethic_shift_name:0 "Liberal Enacts"
- egalitarian_ethic_shift:0 "Liberal Enacts"
+ egalitarian_ethic_shift_name:0 "$ethic_egalitarian$ Enacts"
+ egalitarian_ethic_shift:0 "$ethic_egalitarian$ Enacts"
  egalitarian_ethic_shift_desc:0 "Our empire won't thrive until everyone is able to unite voice and acts."
 
  authoritarian_ethic_shift_name:0 "Authoritarian Propaganda"
@@ -887,8 +887,8 @@ policy_goods_policy:0 "Consumer Goods Production"
  elitist_ethic_shift:0 "Elitist Functionality"
  elitist_ethic_shift_desc:0 "The gears of progress must be well designed and oiled; if you aren't, you stop the machine, and you must server other purpose, while the ones who do are the true engines of society."
 
- pluralist_ethic_shift_name:0 "Egalitarian Declaration"
- pluralist_ethic_shift:0 "Egalitarian Declaration"
+ pluralist_ethic_shift_name:0 "Pluralist Declaration"
+ pluralist_ethic_shift:0 "Pluralist Declaration"
  pluralist_ethic_shift_desc:0 "TO_DO_WIP"
 
  capitalism_ethic_shift_name:0 "Competitive Tendencies"
