--- a/localisation/english/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/zz_evolved_ethics_authorities_l_english.yml
@@ -72,53 +72,79 @@ AUTH_MEGACORP_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Allows the use of §H£dis
 # ---------------------------------------------------------------
 #	ETHICS
 # ---------------------------------------------------------------
-
-ethic_egalitarian:0 "Liberal"
-ethic_fanatic_egalitarian:0 "Fanatic Liberal"
-
 ethic_individualist_desc:1 "§LEveryone is equal in basic dignity and rights. The preservation of order, while an admirable goal, does not justify tyranny and oppression either in principle or in practice. Civilization flourishes best when the few do not dominate the many.§!\n"
 ethic_fanatic_individualist_desc:1 "§LPower does not just corrupt; it is, itself, corruption. All power imbalances are fundamentally coercive by the nature of power. True freedom and justice can only be obtained through equality.§!\n"
  
-ethic_industrial:0 "Industrialist"
-ethic_industrial_desc:1 "§LRapid and efficient infrastructure development is a fundamental necessity in any civilized society. Special attention must be paid to our workers in order to ensure future economic prosperity. Whatever cost we incur is a small price for the future we assure ourselves.§!\n"
+ ethic_industrial:0 "Industrialist"
+ ethic_industrial_plural:0 "Industrialists"
+ ethic_industrial_minor:0 "industrialist"
+ ethic_industrial_minor_plural:0 "industrialists"
+ ethic_industrial_adj:0 "Industrialism"
+ ethic_industrial_adj_minor:0 "industrialism"
+ ethic_industrial_desc:1 "§LRapid and efficient infrastructure development is a fundamental necessity in any civilized society. Special attention must be paid to our workers in order to ensure future economic prosperity. Whatever cost we incur is a small price for the future we assure ourselves.§!\n"
 
-ethic_fanatic_industrial:0 "Fanatic Industrialist"
-ethic_fanatic_industrial_desc:1 "§LThrough our inventions, we are capable of raising civilization from dust and bending the forces of nature to our will. At our command, the planets relinquish their riches and magnificent factories scoop them up. This power demands to be used, and through its use, we shall remake the galaxy in our own image.§!\n"
+ ethic_fanatic_industrial:0 "Fanatic Industrialist"
+ ethic_fanatic_industrial_desc:1 "§LThrough our inventions, we are capable of raising civilization from dust and bending the forces of nature to our will. At our command, the planets relinquish their riches and magnificent factories scoop them up. This power demands to be used, and through its use, we shall remake the galaxy in our own image.§!\n"
 
-ethic_green:0 "Ecologist"
-ethic_green_desc:1 "§LThe true values of a planet lie in its natural resources: its atmosphere, its flora and fauna, and its landscape. Our success so far lies in our ability to preserve and maintain these assets, whilst at the same time benefitting economically and socially from them. These biological systems are the sustaining wealth of any civilization, and we would do well to remember that. §!\n"
+ ethic_green:0 "Ecologist"
+ ethic_green_plural:0 "Ecologists"
+ ethic_green_minor:0 "ecologist"
+ ethic_green_minor_plural:0 "ecologists"
+ ethic_green_adj:0 "Ecologism"
+ ethic_green_adj_minor:0 "ecologism"
+ ethic_green_desc:1 "§LThe true values of a planet lie in its natural resources: its atmosphere, its flora and fauna, and its landscape. Our success so far lies in our ability to preserve and maintain these assets, whilst at the same time benefitting economically and socially from them. These biological systems are the sustaining wealth of any civilization, and we would do well to remember that. §!\n"
  
-ethic_fanatic_green:0 "Fanatic Ecologist"
-ethic_fanatic_green_desc:1 "§LOur musicians cannot compose a melody so profound as the songs of wildlife and the whispers of the trees. Our artists cannot capture the ineffable majesty of mountain tops, secluded lakes, or vast caverns. Whether by design or by chance, we have been born into a universe of transcendent natural beauty.§!\n"
+ ethic_fanatic_green:0 "Fanatic Ecologist"
+ ethic_fanatic_green_desc:1 "§LOur musicians cannot compose a melody so profound as the songs of wildlife and the whispers of the trees. Our artists cannot capture the ineffable majesty of mountain tops, secluded lakes, or vast caverns. Whether by design or by chance, we have been born into a universe of transcendent natural beauty.§!\n"
 
-ethic_capitalism:0 "Competitive"
-ethic_capitalism_desc:1 "§LPersonal ambition is the engine of progress. The desire to improve, the drive to pursue it: these are the things that have brought the stars themselves to our fingertips. We must continue to protect our hard-won freedoms of expression from the irrational fears of conformists, and to never allow genius to be held back by genericism.§!\n"
+ ethic_capitalism:0 "Competitive"
+ ethic_capitalism_plural:0 "Competitive"
+ ethic_capitalism_minor:0 "competitive"
+ ethic_capitalism_minor_plural:0 "competitive"
+ ethic_capitalism_adj:0 "Competitiveness"
+ ethic_capitalism_adj_minor:0 "competitiveness"
+ ethic_capitalism_desc:1 "§LPersonal ambition is the engine of progress. The desire to improve, the drive to pursue it: these are the things that have brought the stars themselves to our fingertips. We must continue to protect our hard-won freedoms of expression from the irrational fears of conformists, and to never allow genius to be held back by genericism.§!\n"
 
-ethic_fanatic_capitalism:0 "Fanatic Competitive"
-ethic_fanatic_capitalism_desc:1 "§LThere is no greater imperative than the call to excel, to accumulate, to reinvest. From the clash of ambitions arise great fortunes, and with them, ever greater ambitions. The wheel turns, flattening the unfit beneath it, but bringing new strivers up with every tread. We know, we exemplify, that whatever is best for the best of us is, ultimately, what is good for all of us."
+ ethic_fanatic_capitalism:0 "Fanatic Competitive"
+ ethic_fanatic_capitalism_desc:1 "§LThere is no greater imperative than the call to excel, to accumulate, to reinvest. From the clash of ambitions arise great fortunes, and with them, ever greater ambitions. The wheel turns, flattening the unfit beneath it, but bringing new strivers up with every tread. We know, we exemplify, that whatever is best for the best of us is, ultimately, what is good for all of us."
  
-ethic_socialism:0 "Cooperative"
-ethic_socialism_desc:0 "§LTeamwork is the engine of progress. Laboring side by side, we become something more than the sum of our parts: a great, living organism, with each of us a cell. To diligently perform the tasks we are given is all that is ever asked of us; to contribute to the greater good is all that is all that we ever ask of ourselves.§!\n"
+ ethic_socialism:0 "Cooperative"
+ ethic_socialism_plural:0 "Cooperative"
+ ethic_socialism_minor:0 "cooperative"
+ ethic_socialism_minor_plural:0 "cooperative"
+ ethic_socialism_adj:0 "Cooperativity"
+ ethic_socialism_adj_minor:0 "cooperativity"
+ ethic_socialism_desc:0 "§LTeamwork is the engine of progress. Laboring side by side, we become something more than the sum of our parts: a great, living organism, with each of us a cell. To diligently perform the tasks we are given is all that is ever asked of us; to contribute to the greater good is all that is all that we ever ask of ourselves.§!\n"
 
-ethic_fanatic_socialism:0 "Fanatic Cooperative"
-ethic_fanatic_socialism_desc:0 "§LThere is no greater imperative than the call to find one's place in the great labor, to give of oneself, to share in the common fruit. To selfishly accumulate wealth, land, or machines - these are tumorous symptoms within the body politic. Rather, it is the burden we share in caring for the young, the old, and the sick that together makes us strong, that together makes us one.§!"
+ ethic_fanatic_socialism:0 "Fanatic Cooperative"
+ ethic_fanatic_socialism_desc:0 "§LThere is no greater imperative than the call to find one's place in the great labor, to give of oneself, to share in the common fruit. To selfishly accumulate wealth, land, or machines - these are tumorous symptoms within the body politic. Rather, it is the burden we share in caring for the young, the old, and the sick that together makes us strong, that together makes us one.§!"
  
-ethic_egalitarian_desc:1 "§LLiberals preserve democratic values, with citizens being directly involved in the governing process through the mechanisms of either representative or direct democracy.§!\n"
+ ethic_egalitarian_desc:1 "§L$ethic_fanatic_egalitarian_plural$ preserve democratic values, with citizens being directly involved in the governing process through the mechanisms of either representative or direct democracy.§!\n"
  
-ethic_fanatic_egalitarian_desc:1 "§LFanatic Liberals stand for a general reduction of central bureaucratic authority and maximum political autonomy and self-governance.§!\n"
+ ethic_fanatic_egalitarian_desc:1 "§L$ethic_fanatic_egalitarian_plural$ stand for a general reduction of central bureaucratic authority and maximum political autonomy and self-governance.§!\n"
  
 
-ethic_elitist:0 "Elitist"
-ethic_elitist_desc:0 "§LIn the great dance of civilizations, we must accept that we each have different parts to play. For many, that place is at the base foundation of our society, toiling in drudgery so that others have the opportunity to bring their talents to bear on the social good. Let no one mistake our privilege for leisure; we are no less custodians than our servants, our tasks no less menial or vital.§!\n" 
+ ethic_elitist:0 "Elitist"
+ ethic_elitist_plural:0 "Elitists"
+ ethic_elitist_minor:0 "elitist"
+ ethic_elitist_minor_plural:0 "elitists"
+ ethic_elitist_adj:0 "Elitism"
+ ethic_elitist_adj_minor:0 "elitism"
+ ethic_elitist_desc:0 "§LIn the great dance of civilizations, we must accept that we each have different parts to play. For many, that place is at the base foundation of our society, toiling in drudgery so that others have the opportunity to bring their talents to bear on the social good. Let no one mistake our privilege for leisure; we are no less custodians than our servants, our tasks no less menial or vital.§!\n" 
  
-ethic_fanatic_elitist:0 "Fanatic Elitist"
-ethic_fanatic_elitist_desc:0 "§LSociety is a herd, with shepherds and watchdogs; society is a struggle, with winners and losers. The unwashed masses, little better than animals, need the leadership of those destined few with the necessary acumen, vision, and strength to guide them towards a greater purpose. Who better than us?§!\n" 
+ ethic_fanatic_elitist:0 "Fanatic Elitist"
+ ethic_fanatic_elitist_desc:0 "§LSociety is a herd, with shepherds and watchdogs; society is a struggle, with winners and losers. The unwashed masses, little better than animals, need the leadership of those destined few with the necessary acumen, vision, and strength to guide them towards a greater purpose. Who better than us?§!\n" 
  
-ethic_pluralist:0 "Egalitarian"
-ethic_pluralist_desc:0 "§LIn the face of the cosmos, how silly and insignificant our petty differences must seem! We are little more than motes of dust bound to the same speck, circling a mere pinprick of luminescence. Of what consequence are the colors of our individual bodies, of where or to whom we were born?§!\n"
+ ethic_pluralist:0 "Pluralist"
+ ethic_pluralist_plural:0 "Pluralists"
+ ethic_pluralist_minor:0 "pluralist"
+ ethic_pluralist_minor_plural:0 "pluralists"
+ ethic_pluralist_adj:0 "Pluralism"
+ ethic_pluralist_adj_minor:0 "pluralism"
+ ethic_pluralist_desc:0 "§LIn the face of the cosmos, how silly and insignificant our petty differences must seem! We are little more than motes of dust bound to the same speck, circling a mere pinprick of luminescence. Of what consequence are the colors of our individual bodies, of where or to whom we were born?§!\n"
  
-ethic_fanatic_pluralist:0 "Fanatic Egalitarian"
-ethic_fanatic_pluralist_desc:0 "§LWe are all of us worthy of the same dignity and the same basic respect, for within each of us lies the potential for greatness, for a stroke of luck or genius, for the very salvation of our species. Yes, we are not all created equal, but what does that matter when we are equally endowed with the capacity to create?§!\n"
+ ethic_fanatic_pluralist:0 "Fanatic Pluralist"
+ ethic_fanatic_pluralist_desc:0 "§LWe are all of us worthy of the same dignity and the same basic respect, for within each of us lies the potential for greatness, for a stroke of luck or genius, for the very salvation of our species. Yes, we are not all created equal, but what does that matter when we are equally endowed with the capacity to create?§!\n"
 
 
 
@@ -155,7 +181,7 @@ TEC_ETHIC_INDIVIDUALIST_BUILDINGS:0 "§ECan build £building£ §HEntrepreneur b
 # Authoritarian edict
  TEC_ETHIC_ALLOWS_INFORMATION_QUARANTINE:0 "§EAllows §HInformation Quarantine§! edict§!"
 
-# Liberal edict
+# Egalitarian edict
  TEC_ETHIC_ALLOWS_ENCOURAGE_THOUGHT:0 "§EAllows §HEncourage Thought§! edict§!"
 
 # Xenophobe Edict
@@ -178,9 +204,9 @@ TEC_ETHIC_INDIVIDUALIST_BUILDINGS:0 "§ECan build £building£ §HEntrepreneur b
  TEC_ETHIC_ALLOWS_SOCIAL_STATE_EDICT:0 "§EAllows §HSocial State§! edict§!"
 
 
-# Egalitarian greater than ourselves like
+# Pluralist greater than ourselves like
  TEC_ETHIC_ALLOWS_EQUALITY_EDICT:0 "§EAllows §HEqual opportunities§! edict§!"
- TEC_ETHIC_ALLOWS_LEADER_XP:0 "§EAll leaders will gain a §Hsmall§! amount of experience yearly, §HDoubled§! for actively employed leaders, up to level §H3§!.§!"
+ TEC_ETHIC_ALLOWS_LEADER_XP:0 "§EAll leaders will gain a §HSmall§! amount of experience yearly, §HDoubled§! for actively employed leaders, up to level §H3§!.§!"
  TEC_ETHIC_FORBIDS_MEGACORP:0 "§EForbid §HCorporate§! Authorities§!"
 
 # ------------------------------------------------- GESTALTS
@@ -276,8 +302,8 @@ ethic_tec_fe_support_desc:0 "§LTo do§!\n"
  industrial_unrest:0 "Unrest (Industrialism Attraction)"
  industrial_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YIndustrialism§!"
 
- pluralist_unrest:0 "Unrest (Egalitarian Attraction)"
- pluralist_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YEgalitarianism§!"
+ pluralist_unrest:0 "Unrest (Pluralist Attraction)"
+ pluralist_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YPluralism§!"
 
  elitist_unrest:0 "Unrest (Elitist Attraction)"
  elitist_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YElitism§!"
