--- a/localisation/english/zz_evolved_factions_l_english.yml
+++ b/localisation/english/zz_evolved_factions_l_english.yml
@@ -93,15 +93,15 @@
  TEC_FAC_AUTH_WEAK_STANCE:0 "$TEC_FAC_AUTH_NO_WEAK_STANCE$"
  TEC_FAC_AUTH_NO_WEAK_STANCE_DESC:0 "Not having a an §YAggresive§! or §YSupremacist§! diplomatic stance §Rdisplease§! the [Root.GetName]."
 # /
-# Liberal ---------------------------------------------------------------
+# Egalitarian ---------------------------------------------------------------
  TEC_EGA_FEDERALSTATE:0 "Federalized State"
  TEC_EGA_NO_FEDERALSTATE:0 "Federalized State"
  TEC_EGA_FEDERALSTATE_DESC:0 "Active §YFederalized State§! authority stance policy will §Gplease§! the [Root.GetName]."
 
 
- TEC_FAC_EGA_LIBERALCIVICS:0 "Represented Liberalism"
- TEC_FAC_EGA_NO_LIBERALCIVICS:0 "Represented Liberalism"
- TEC_FAC_EGA_LIBERALCIVICS_DESC:0 "Having any §YCivic§! representing Liberal ideas, such as Beacon of Liberty, §Gplease§! the [Root.GetName]."
+ TEC_FAC_EGA_EGALITARIAN_CIVICS:0 "Represented $ethic_egalitarian_adj$"
+ TEC_FAC_EGA_NO_EGALITARIAN_CIVICS:0 "Represented $ethic_egalitarian_adj$"
+ TEC_FAC_EGA_EGALITARIAN_CIVICS_DESC:0 "Having any §YCivic§! representing $ethic_egalitarian$ ideas, such as Beacon of Liberty, §Gplease§! the [Root.GetName]."
 
  TEC_FAC_EGA_GOOD_STANDARDS:0 "Secured Society"
  TEC_FAC_EGA_NO_GOOD_STANDARDS:0 "Secured Society"
@@ -562,7 +562,7 @@
  TEC_FAC_ELI_CHEMICAL_BLISS_BAD:0 "No Chemical Bliss"
  TEC_FAC_ELI_NO_CHEMICAL_BLISS_DESC:0 "Having any species with §YChemical Bliss§! living standards §Rseverely displease§! the [Root.GetName]."
 # /
-# Egalitarian ---------------------------------------------------------------
+# Pluralist ---------------------------------------------------------------
  TEC_FAC_PLU_DISTRIBUTEDGOODS1:0 "Mutual Goods"
  TEC_FAC_PLU_NO_DISTRIBUTEDGOODS1:0 "Distributed Goods"
  TEC_FAC_PLU_DISTRIBUTEDGOODS1_DESC:0 "Active §YDistributing Goods§! decision among at least §G1§! of our planets will §Gplease§! the [Root.GetName]."
@@ -873,8 +873,8 @@
  LABOURITE_CASTE:0 "Caste System" 
  LABOURITE_NO_CASTE_DESC:0 "Letting anybody in our Empire under a §YCaste System§! will greatly displease the [Root.GetName]."
  
- EQUAL_ARMY:0 "Egalitarian Military"
- NO_EQUAL_ARMY:0 "Egalitarian Military"
+ EQUAL_ARMY:0 "$ethic_egalitarian$ Military"
+ NO_EQUAL_ARMY:0 "$ethic_egalitarian$ Military"
  EQUAL_ARMY_DESC:0 "Ensuring that no species in our Empire is subject to Limited or None Military Service will please the [Root.GetName]."
 
 
@@ -1031,8 +1031,8 @@ NO_PRIVATE_MEDICINE:0 "No Private Healthcare"
 PRIVATE_MEDICINE:0 "Private Healthcare"
 NO_PRIVATE_MEDICINE_DESC:0 "Active §YPrivate Healthcare§! social policy displeases the [Root.GetName]."
 
-MERITOCRATIC_ELITE:0 "Developed Egalitarianism"
-NO_MERITOCRATIC_ELITE:0 "No Developed Egalitarianism"
+MERITOCRATIC_ELITE:0 "Developed $ethic_egalitarian_adj$"
+NO_MERITOCRATIC_ELITE:0 "No Developed $ethic_egalitarian_adj$"
 MERITOCRATIC_ELITE_DESC:0 "Active §YLabour Unions§!, §YSyndicalism§! or §YMeritocracy§! government civic will please the [Root.GetName]."
 
 PUBLIC_EDUCATION:0 "Public Education"
@@ -1155,8 +1155,8 @@ EDUCATION_CAMPAIGN_DESC:0 "Providing a §YPublic Education§! policy to the empi
 
 # edict
 
- PLURALIST_INDOCTRINATION:0 "EGALITARIAN INDOCTRINATION"
- NO_PLURALIST_INDOCTRINATION:0 "NO EGALITARIAN INDOCTRINATION"
+ PLURALIST_INDOCTRINATION:0 "PLURALIST INDOCTRINATION"
+ NO_PLURALIST_INDOCTRINATION:0 "NO PLURALIST INDOCTRINATION"
  PLURALIST_INDOCTRINATION_DESC:0 "Active §YIndoctrination: Environmentalism§! edict displeases the [Root.GetName]."
  
  ELITIST_INDOCTRINATION:0 "ELITISM INDOCTRINATION"
@@ -1292,9 +1292,9 @@ EDUCATION_CAMPAIGN_DESC:0 "Providing a §YPublic Education§! policy to the empi
  DEVELOPMENT_ECONOMY_DESC:0 "Adoption of §YHarmony§! displeases the [Root.GetName]."
  
  
- PROGRESSIVE_ANARCHY:0 "Developed Liberalism"
- NO_PROGRESSIVE_ANARCHY:0 "Develop Liberalism"
- PROGRESSIVE_ANARCHY_DESC:0 "Active §YSpirit of Freedom§! or §YPolitical Egalitarianism§! government civic will please the [Root.GetName]." 
+ PROGRESSIVE_ANARCHY:0 "Developed $ethic_egalitarian_adj$"
+ NO_PROGRESSIVE_ANARCHY:0 "Develop $ethic_egalitarian_adj$"
+ PROGRESSIVE_ANARCHY_DESC:0 "Active §YSpirit of Freedom§! or §YPolitical $ethic_egalitarian_adj$§! government civic will please the [Root.GetName]." 
 
  TRADITION_ANARCHY:0 "Traditional Liberty"
  NO_TRADITION_ANARCHY:0 "No Traditional Authority"
@@ -1379,7 +1379,7 @@ EDUCATION_CAMPAIGN_DESC:0 "Providing a §YPublic Education§! policy to the empi
  TRADITIONALIST_NO_SPIRITUALISM:0 "No Traditional Discovery"
  TRADITIONALIST_SPIRITUALISM_DESC:0 "Adopting of §YDiscovery§! displeases the [Root.GetName]."
  
- PLURALISM_TRADITION:0 "Traditional Egalitarianism"
+ PLURALISM_TRADITION:0 "Traditional $ethic_pluralist_adj$"
  NO_PLURALISM_TRADITION:0 "No Traditional Aristocracy"
  PLURALISM_TRADITION_DESC:0 "Adoption of §YAristocracy§! traditions displeases the [Root.GetName]." 
  
@@ -1400,37 +1400,37 @@ EDUCATION_CAMPAIGN_DESC:0 "Providing a §YPublic Education§! policy to the empi
 
 #Promoting/supressing
 
- suppressed_egalitarian:0 "Liberalism Suppressed"
- suppressed_egalitarian_desc:0 "The §HLiberal§! Ethic is being suppressed by the government."
- promoted_egalitarian:0 "Liberalism Promoted"
- promoted_egalitarian_desc:0 "The §HLiberal§! Ethic is being promoted by the government."
+ suppressed_egalitarian:0 "$ethic_egalitarian_adj$ Suppressed"
+ suppressed_egalitarian_desc:0 "The §H$ethic_egalitarian$§! Ethic is being suppressed by the government."
+ promoted_egalitarian:0 "$ethic_egalitarian_adj$ Promoted"
+ promoted_egalitarian_desc:0 "The §H$ethic_egalitarian$§! Ethic is being promoted by the government."
  
- suppressed_capitalism:0 "Individualism Suppressed"
- suppressed_capitalism_desc:0 "The §HCompetitive§! Ethic is being suppressed by the government."
- promoted_capitalism:0 "Individualism Promoted"
- promoted_capitalism_desc:0 "The §HCompetitive§! Ethic is being promoted by the government." 
+ suppressed_capitalism:0 "$ethic_capitalism_adj$ Suppressed"
+ suppressed_capitalism_desc:0 "The §H$ethic_capitalism$§! Ethic is being suppressed by the government."
+ promoted_capitalism:0 "$ethic_capitalism_adj$ Promoted"
+ promoted_capitalism_desc:0 "The §H$ethic_capitalism$§! Ethic is being promoted by the government." 
  
- suppressed_socialism:0 "Collectivism Suppressed"
- suppressed_socialism_desc:0 "The §HCooperative§! Ethic is being suppressed by the government."
- promoted_socialism:0 "Collectivism Promoted"
- promoted_socialism_desc:0 "The §HCooperative§! Ethic is being promoted by the government." 
+ suppressed_socialism:0 "$ethic_socialism_adj$ Suppressed"
+ suppressed_socialism_desc:0 "The §H$ethic_socialism$§! Ethic is being suppressed by the government."
+ promoted_socialism:0 "$ethic_socialism_adj$ Promoted"
+ promoted_socialism_desc:0 "The §H$ethic_socialism$§! Ethic is being promoted by the government." 
 
- suppressed_green:0 "Ecologism Suppressed"
- suppressed_green_desc:0 "The §HEcologist§! Ethic is being suppressed by the government."
- promoted_green:0 "Ecologism Promoted"
- promoted_green_desc:0 "The §HEcologist§! Ethic is being promoted by the government."
+ suppressed_green:0 "$ethic_green_adj$ Suppressed"
+ suppressed_green_desc:0 "The §H$ethic_green$§! Ethic is being suppressed by the government."
+ promoted_green:0 "$ethic_green_adj$ Promoted"
+ promoted_green_desc:0 "The §H$ethic_green$§! Ethic is being promoted by the government."
  
- suppressed_industrial:0 "Industrialism Suppressed"
- suppressed_industrial_desc:0 "The §HIndustrialist§! Ethic is being suppressed by the government."
- promoted_industrial:0 "Industrialism Promoted"
- promoted_industrial_desc:0 "The §HIndustrialist§! Ethic is being promoted by the government."
+ suppressed_industrial:0 "$ethic_industrial_adj$ Suppressed"
+ suppressed_industrial_desc:0 "The §H$ethic_industrial$§! Ethic is being suppressed by the government."
+ promoted_industrial:0 "$ethic_industrial_adj$ Promoted"
+ promoted_industrial_desc:0 "The §H$ethic_industrial$§! Ethic is being promoted by the government."
 
- suppressed_pluralist:0 "Egalitarianism Suppressed"
- suppressed_pluralist_desc:0 "The §HEgalitarian§! Ethic is being suppressed by the government."
- promoted_pluralist:0 "Egalitarianism Promoted"
- promoted_pluralist_desc:0 "The §HEgalitarian§! Ethic is being promoted by the government."
+ suppressed_pluralist:0 "$ethic_pluralist_adj$ Suppressed"
+ suppressed_pluralist_desc:0 "The §H$ethic_pluralist$§! Ethic is being suppressed by the government."
+ promoted_pluralist:0 "$ethic_pluralist_adj$ Promoted"
+ promoted_pluralist_desc:0 "The §H$ethic_pluralist$§! Ethic is being promoted by the government."
  
- suppressed_elitist:0 "Elitism Suppressed"
- suppressed_elitist_desc:0 "The §HElitist§! Ethic is being suppressed by the government."
- promoted_elitist:0 "Elitism Promoted"
- promoted_elitist_desc:0 "The §HElitist§! Ethic is being promoted by the government." 
+ suppressed_elitist:0 "$ethic_elitist_adj$ Suppressed"
+ suppressed_elitist_desc:0 "The §H$ethic_elitist$§! Ethic is being suppressed by the government."
+ promoted_elitist:0 "$ethic_elitist_adj$ Promoted"
+ promoted_elitist_desc:0 "The §H$ethic_elitist$§! Ethic is being promoted by the government." 
