--- a/localisation/english/zz_evolved_gender_policies_l_english.yml
+++ b/localisation/english/zz_evolved_gender_policies_l_english.yml
@@ -9,8 +9,8 @@
  policy_humanoid_govern_recruitment_gender_policy:0 "Gender Policy - Government"
  policy_humanoid_govern_recruitment_gender_policy_desc:0 "Governor appointment policy. (Male/Female/Both)"
 
- humanoid_governor_recruitment_gender_policy_option_both_name:0	"Liberal species"
- humanoid_governor_recruitment_gender_policy_option_both:0 "Liberal species"
+ humanoid_governor_recruitment_gender_policy_option_both_name:0	"Equal species"
+ humanoid_governor_recruitment_gender_policy_option_both:0 "Equal species"
  humanoid_governor_recruitment_gender_policy_option_both_desc:0 "Can have both male and female Rulers and Governors. \n\n§LThis species have achieved near equal gender opportunities for the leadership of their society.§!"
 
  humanoid_governor_recruitment_gender_policy_option_male_name:0	"Patriarchal species"
