--- a/localisation/english/zz_evolved_l_english.yml
+++ b/localisation/english/zz_evolved_l_english.yml
@@ -1,10 +1,7 @@
 ﻿l_english:
 
 
- ENSLAVED_DESC:0 "This Pop is enslaved. Enslaved Pops generates unhappiness for all Liberal Pops on this planet."
- COL_LABEL:0 "Authoritarian <-> Liberal"
- 
-
+ ENSLAVED_DESC:0 "This Pop is enslaved. Enslaved Pops generates unhappiness for all $ethic_egalitarian$ Pops on this planet."
  
 
  RT_HIGH_TECHNICIAN:0 "SKYNET"
@@ -465,30 +462,30 @@ requires_technology_big_brother:1 "$TRIGGER_FAIL$Requires §YFanatic Authoritari
  
 
  
- 16_FRIENDLY_GREETING:1 "Your government does a good job of curtailing the worst excesses of Liberalism, [From.GetSpeciesNamePlural]."
- 04_INSULT_PROPOSE_COL_IND:0 "What a selfish people you are, always putting your individual selves foremost. Liberalism... ha! The [Root.GetName] will not survive the year."
- uplift.7215.c.tooltip:1 "The [From.From.From.GetName] gain the §YLiberal§! Ethic."
- nomad.21.d.response:1 "They are a spiritual and Liberal crowd, how well that meshes with your tribe is for you to discern."
- observation.2041.desc:0 "The natives on [From.GetName] have not only become enamored with our technology, but our advisors report that they are also beginning to emulate our ways.\n\nInspired by what they have seen of our art and culture, [From.Owner.GetSpeciesName] society appears to have developed a new sense of Liberalism. Their personal freedoms have greatly increased since our arrival."
- observation.2061.desc:0 "Anarchy reigns supreme on the surface of [From.GetName], and our advisors are having a difficult time teaching modern science to the [From.Owner.GetSpeciesNamePlural]. Their so-called scientists all pull their research in directions that happen to interest them for the moment, showing little regard for the common good.\n\nOur mission of enlightenment continues, despite the misguided Liberalism displayed by the natives, but it will take longer than expected."
- COL_LABEL:1 "Authoritarian <-> Liberal"
- SOC_LABEL:1 "Cooperative <-> Competitive"
- GRN_LABEL:1 "Ecologist <-> Industrialist"
- ELT_LABEL:1 "Elitist <-> Egalitarian"
- POP_ATTRACTION_EGALITARIAN_DIPLOMACY_POS:0 "§G+ Diplomacy with Liberal Empires§!"
- POP_ATTRACTION_EGALITARIAN_DIPLOMACY_POS:0 "§G+ Diplomacy with Liberal Empires§!"
- POP_ATTRACTION_EGALITARIAN_DIPLOMACY_NEG:0 "§R- Diplomacy with Liberal Empires§!"
- POP_ATTRACTION_EGALITARIAN_DIPLOMACY_NEG:0 "§R- Diplomacy with Liberal Empires§!"
+ 16_FRIENDLY_GREETING:1 "Your government does a good job of curtailing the worst excesses of $ethic_egalitarian_adj$, [From.GetSpeciesNamePlural]."
+ 04_INSULT_PROPOSE_COL_IND:0 "What a selfish people you are, always putting your individual selves foremost. $ethic_egalitarian_adj$... ha! The [Root.GetName] will not survive the year."
+ uplift.7215.c.tooltip:1 "The [From.From.From.GetName] gain the §Y$ethic_egalitarian$§! Ethic."
+ nomad.21.d.response:1 "They are a spiritual and $ethic_egalitarian_adj_minor$ crowd, how well that meshes with your tribe is for you to discern."
+ observation.2041.desc:0 "The natives on [From.GetName] have not only become enamored with our technology, but our advisors report that they are also beginning to emulate our ways.\n\nInspired by what they have seen of our art and culture, [From.Owner.GetSpeciesName] society appears to have developed a new sense of $ethic_egalitarian_adj$. Their personal freedoms have greatly increased since our arrival."
+ observation.2061.desc:0 "Anarchy reigns supreme on the surface of [From.GetName], and our advisors are having a difficult time teaching modern science to the [From.Owner.GetSpeciesNamePlural]. Their so-called scientists all pull their research in directions that happen to interest them for the moment, showing little regard for the common good.\n\nOur mission of enlightenment continues, despite the misguided $ethic_egalitarian_adj_minor$ displayed by the natives, but it will take longer than expected."
+ COL_LABEL:1 "$ethic_authoritarian$ <-> $ethic_egalitarian$"
+ SOC_LABEL:1 "$ethic_socialism$ <-> $ethic_capitalism$"
+ GRN_LABEL:1 "$ethic_green$ <-> $ethic_industrial$"
+ ELT_LABEL:1 "$ethic_elitist$ <-> $ethic_pluralist$"
+ POP_ATTRACTION_EGALITARIAN_DIPLOMACY_POS:0 "§G+ Diplomacy with $ethic_egalitarian$ Empires§!"
+ POP_ATTRACTION_EGALITARIAN_DIPLOMACY_POS:0 "§G+ Diplomacy with $ethic_egalitarian$ Empires§!"
+ POP_ATTRACTION_EGALITARIAN_DIPLOMACY_NEG:0 "§R- Diplomacy with $ethic_egalitarian$ Empires§!"
+ POP_ATTRACTION_EGALITARIAN_DIPLOMACY_NEG:0 "§R- Diplomacy with $ethic_egalitarian$ Empires§!"
  
- opinion_of_egalitarian_pos:0 "Free Liberalists"
- opinion_of_egalitarian:0 "Liberal Rabble"
- pft_progressive_desc:1 "Progressive Factions desire non-discrimination within existing social structures and dislike non-representative forms of government.\n\n§ELiberal Ethos§!"
- factions.2000.desc.progressive:0 "As a result of bringing this faction into their government, they have become more outwardly §HLiberal§!.\n\n"
- egalitarian_unrest:0 "Unrest (Liberal Attraction)"
- egalitarian_unrest:0 "Unrest (Liberal Attraction)"
- egalitarian_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YLiberalism§!."
- egalitarian_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YLiberalism§!."
- unrest.168.desc:0 "Greetings [Root.GetSpeciesName]. We are freedom fighters - former slaves - from the [old_owner.GetName], where we suffered much abuse under the oppression of [old_owner.GetRulerTitle] [old_owner.GetRulerName]. We have long admired your Liberal standards, the "[new_owner.GetSpeciesAdj]" way, as we would refer to it back home, and we share your values. We have seceded and wish to be a part of your nation, if you will have us?" 
+ opinion_of_egalitarian_pos:0 "Free $ethic_egalitarian_plural$"
+ opinion_of_egalitarian:0 "$ethic_egalitarian$ Rabble"
+ pft_progressive_desc:1 "Progressive Factions desire non-discrimination within existing social structures and dislike non-representative forms of government.\n\n§E$ethic_egalitarian$ Ethos§!"
+ factions.2000.desc.progressive:0 "As a result of bringing this faction into their government, they have become more outwardly §H$ethic_egalitarian$§!.\n\n"
+ egalitarian_unrest:0 "Unrest ($ethic_egalitarian$ Attraction)"
+ egalitarian_unrest:0 "Unrest ($ethic_egalitarian$ Attraction)"
+ egalitarian_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §Y$ethic_egalitarian_adj$§!."
+ egalitarian_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §Y$ethic_egalitarian_adj$§!."
+ unrest.168.desc:0 "Greetings [Root.GetSpeciesName]. We are freedom fighters - former slaves - from the [old_owner.GetName], where we suffered much abuse under the oppression of [old_owner.GetRulerTitle] [old_owner.GetRulerName]. We have long admired your $ethic_egalitarian$ standards, the ''[new_owner.GetSpeciesAdj]'' way, as we would refer to it back home, and we share your values. We have seceded and wish to be a part of your nation, if you will have us?" 
 
  
  opinion_socialism_pos_1:0 "Socialist Comrades"
@@ -531,15 +528,15 @@ requires_technology_big_brother:1 "$TRIGGER_FAIL$Requires §YFanatic Authoritari
  opinion_industrial_neg_3:0 "Rattle Metalheads"
  opinion_industrial_neg_4:0 "Rattle Metalheads"
  
- opinion_pluralist_pos_1:0 "Egalitarian Brothers"
- opinion_pluralist_pos_2:0 "Egalitarian Brothers"
- opinion_pluralist_pos_3:0 "Egalitarian Brothers"
- opinion_pluralist_pos_4:0 "Egalitarian Brothers"
+ opinion_pluralist_pos_1:0 "Pluralist Brothers"
+ opinion_pluralist_pos_2:0 "Pluralist Brothers"
+ opinion_pluralist_pos_3:0 "Pluralist Brothers"
+ opinion_pluralist_pos_4:0 "Pluralist Brothers"
  
- opinion_pluralist_neg_1:0 "Egalitarian Rabble"
- opinion_pluralist_neg_2:0 "Egalitarian Rabble"
- opinion_pluralist_neg_3:0 "Egalitarian Rabble"
- opinion_pluralist_neg_4:0 "Egalitarian Rabble" 
+ opinion_pluralist_neg_1:0 "Pluralist Rabble"
+ opinion_pluralist_neg_2:0 "Pluralist Rabble"
+ opinion_pluralist_neg_3:0 "Pluralist Rabble"
+ opinion_pluralist_neg_4:0 "Pluralist Rabble" 
 
  opinion_elitist_pos_1:0 "Noble Aristocrats"
  opinion_elitist_pos_2:0 "Noble Aristocrats"
@@ -559,7 +556,7 @@ requires_technology_big_brother:1 "$TRIGGER_FAIL$Requires §YFanatic Authoritari
  
  POP_ATTRACTION_LIMITED_CITIZEN_POS:0 "§G+ Limited Citizen Pops in Empire§!"
  POP_ATTRACTION_ELITIST_POS:0 "§G+ Elitist Governing Ethics§!"
- POP_ATTRACTION_PLURALIST_POS:0 "§G+ Egalitarian Governing Ethics§!"
+ POP_ATTRACTION_PLURALIST_POS:0 "§G+ Pluralist Governing Ethics§!"
  POP_ATTRACTION_ENHANCED_LEADERS_POS:0 "§G+ Leader Enhancement Policy in Empire§!"
  
  
@@ -640,11 +637,11 @@ requires_adopt_imperialism:0 "$TRIGGER_FAIL$Requires to adopt §YImperialism§! 
 requires_adopt_imperialism_expansion:0 "$TRIGGER_FAIL$Requires to adopt §YImperialism§! or §YExpansion§! tradition tree first."
 requires_adopt_supremacy:0 "$TRIGGER_FAIL$Requires to adopt §YSupremacy§! tradition tree first."
 requires_adopt_harmony:0 "$TRIGGER_FAIL$Requires to adopt §YHarmony§! tradition tree."
-requires_not_pluralist:0 "$TRIGGER_FAIL$Cannot be picked by §YEgalitarian§!."
+requires_not_pluralist:0 "$TRIGGER_FAIL$Cannot be picked by §YPluralists§!."
 requires_adopt_expansion:0 "$TRIGGER_FAIL$Requires to adopt §YExpansion§! tradition tree first."
 requires_environmentalism_finish:0 "$TRIGGER_FAIL$Requires to finish §YHarmony§! traditions."
-requires_not_elitist:0 "$TRIGGER_FAIL$Requires §YFanatic Liberal§!. Cannot be picked by §YFanatic Militarist§!"
-requires_egalitarian_not_pluralist:0 "$TRIGGER_FAIL$Requires §YLiberal§! ethic, cannot be picked by §YEgalitarian§! and §YFanatic Ecologist§!."
+requires_not_elitist:0 "$TRIGGER_FAIL$Requires §Y$ethic_fanatic_egalitarian$§!. Cannot be picked by §YFanatic Militarist§!"
+requires_egalitarian_not_pluralist:0 "$TRIGGER_FAIL$Requires §Y$ethic_egalitarian$§! ethic, cannot be picked by §Y$ethic_pluralist$§! and §Y$ethic_fanatic_green$§!."
 requires_authoritarian_not_elitist:0 "$TRIGGER_FAIL$Requires §YAuthoritarian§! ethic, cannot be picked by §YElitist§!."
 requires_not_xenophobe:0 "Cannot be picked by §YXenophobe§!."
 requires_xenophobe_not_pacifist:0 "$TRIGGER_FAIL$Requires §YXenophobe§! ethic, cannot be picked by §YPacifist§!, cannot be a part of §YFederation§!."
@@ -662,7 +659,7 @@ ap_life_creators:0 "Mastery of Life"
 ap_life_creators_desc:0 "Requires to have §YLife Engineering§! mod installed! Unlocks technologies, allowing to create §YPre-sentient§! and §YSentient§! forms of life on the planets."
 
 pm_tec_new_babylon.name:0 "Galactic Wonder: New Babylon"
-pm_tec_new_babylon.desc:0 "From now on this Planet is considered to be a Galactic paradise of Cultural Liberalism. Every Xeno is welcome here, to join the perpetual celebration of Diversity."
+pm_tec_new_babylon.desc:0 "From now on this Planet is considered to be a Galactic paradise of Cultural $ethic_egalitarian_adj$. Every Xeno is welcome here, to join the perpetual celebration of Diversity."
 
 edict_pm_tec_new_babylon:0 "Establish New Babylon"
 edict_pm_tec_new_babylon_desc:0 "Turn the planet, to become a Galactic Wonder - §YNew Babylon§!. The Edict is only available if the number of different species in your Empire is more than 3."
@@ -724,7 +721,7 @@ building_colliseum:0 "Neo-Coliseum"
 building_colliseum_desc:0 "Enhances planetary economy and increases happiness. Also, local army gets a buff for discharged Gladiators, who find themselves in the military."
 requirement_energy:0 "§RCan only be built on the rich (2+) Energy deposit.§!"
 requirement_slave_unslave:0 "§RRequires to have more than 4 slaved and 4 unslaved pops on the planet.§!"
-requires_not_pluralist_authoritarian:0 "$TRIGGER_FAIL$Requires §YAuthoritarian§! and not §YEgalitarian§! ethos."
+requires_not_pluralist_authoritarian:0 "$TRIGGER_FAIL$Requires §YAuthoritarian§! and not §YPluralist§! ethos."
 requires_no_federation:0 "$TRIGGER_FAIL$Requires NOT to be a part of §YFederation§!."
 
 
@@ -733,7 +730,7 @@ triggered_opinion_ap_galactic_contender: "Due Respect"
 
 factions.1.desc.prosperity:1 "Their members lobby for a national focus on social and economic prosperity, and stability through peaceful means."
 factions.1.desc.progressive:0 "Their members work for freedom and justice for all denizens of our empire.\n\n"
-factions.2000.desc.progressive:0 "As a result of bringing this faction into their government, they have become more outwardly §HLiberal§!.\n\n"
+factions.2000.desc.progressive:0 "As a result of bringing this faction into their government, they have become more outwardly §H$ethic_egalitarian$§!.\n\n"
  
 factions.1.desc.conservatives:0 "Their members work for a more rewarding personal account of each individual's percepted merits and accomplishments.\n\n"
 factions.1.desc.bankers:0 "Their members lobby for a national focus on financial growth and developing of free market.\n\n"
@@ -744,7 +741,7 @@ factions.1.desc.manufacturers:0 "Their members have been pushing hard for the In
 factions.2000.desc.conservatives:0 "As a result of bringing this faction into their government, they have become more outwardly §HElitarian§!.\n\n"
 factions.2000.desc.bankers:0 "As a result of bringing this faction into their government, they have become more outwardly §HCompetitive§!.\n\n"
 factions.2000.desc.socialists:0 "As a result of bringing this faction into their government, they have become more outwardly §HCollectivistic§!.\n\n"
-factions.2000.desc.labourites:0 "As a result of bringing this faction into their government, they have become more outwardly §HEgalitarian§!.\n\n"
+factions.2000.desc.labourites:0 "As a result of bringing this faction into their government, they have become more outwardly §HPluralist§!.\n\n"
 factions.2000.desc.environmentalists:0 "As a result of bringing this faction into their government, they have become more outwardly §HEcologistic§!.\n\n"
 factions.2000.desc.manufacturers:0 "As a result of bringing this faction into their government, they have become more outwardly §HIndustrialistic§!.\n\n"
 
@@ -809,7 +806,7 @@ MOD_POP_CONSUMER_GOODS_MULT:0 "Consumer Goods"
  
  observation.1002.desc:0 "The [From.GetSpeciesNamePlural] have shifted their ethos to §YCollectivism§!."
  observation.2002.desc:0 "The [From.GetSpeciesNamePlural] have shifted their ethos to §YElitism§!."
- observation.3002.desc:0 "The [From.GetSpeciesNamePlural] have shifted their ethos to §YEgalitarianism§!."
+ observation.3002.desc:0 "The [From.GetSpeciesNamePlural] have shifted their ethos to §Y$ethic_pluralist_adj$§!."
  observation.4002.desc:0 "The [From.GetSpeciesNamePlural] have shifted their ethos to §YEcologism§!."
  observation.5002.desc:0 "The [From.GetSpeciesNamePlural] have shifted their ethos to §YIndustrialism§!."
  
@@ -856,9 +853,9 @@ empire_is_socialism:0 "$TRIGGER_FAIL$Our empire embraces §Y$ethic_socialism$§!
  
  
 
-FANATIC_LIBERTARIAN_GOVERNMENT:0 "Political Liberalism"
-NO_FANATIC_LIBERTARIAN_GOVERNMENT:0 "No Political Liberalism"
-FANATIC_LIBERTARIAN_GOVERNMENT_DESC:0 "All Factions, except §YTotalitarians§! and §YAristocratic§!, are happier when §YPolitical Liberalism§! civic is active." 
+FANATIC_LIBERTARIAN_GOVERNMENT:0 "Political $ethic_egalitarian_adj$"
+NO_FANATIC_LIBERTARIAN_GOVERNMENT:0 "No Political $ethic_egalitarian_adj$"
+FANATIC_LIBERTARIAN_GOVERNMENT_DESC:0 "All Factions, except §YTotalitarians§! and §YAristocratic§!, are happier when §YPolitical $ethic_egalitarian_adj$§! civic is active." 
 
 empire_not_pluralist_collectivist:0 "$TRIGGER_FAIL$Our empire does not embrace the necessary §Y$ethic_socialism$§!/§Y$ethic_pluralist$§! ideals."
 empire_not_pluralist_collectivist_egalitarian:0 "$TRIGGER_FAIL$Our empire does not embrace the necessary §Y$ethic_socialism$§!/§Y$ethic_pluralist$§! or §Y$ethic_egalitarian$§! ideals."
@@ -911,7 +908,7 @@ unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
 
 
 gov_peoples_republic:0 "People's Republic"
-gov_peoples_republic_desc:0 "Government is an Liberal form of dictatorship. There is an actual parliament, but it's dominated by a single political power - so-called ''People's Party''."
+gov_peoples_republic_desc:0 "Government is a pseudo-$ethic_egalitarian_minor$ form of dictatorship. There is an actual parliament, but it's dominated by a single political power - so-called ''People's Party''."
 
 gov_great_houses:0 "The Great Houses"
 gov_great_houses_desc:0 "This civilization is ruled by the leadership council of a few Great Houses, which traditions drives from ancient clans and tribes, but which now function more as political parties. Unlike in classic Noble Aristocracy, house membership is not tied to patrimonial matters, such as birth and marriage - anyone can be adopted to the House and advance to it's highest ranks, as long as he pledges loyalty to the House and respects it's Tradition."
@@ -945,10 +942,10 @@ gov_absolute_monarchy_desc:0 "A form of monarchy in which the monarch holds supr
 gov_cor_dictatorship:0 "Corporate Dictatorship"
 gov_cor_dictatorship_desc:0 "An extremely capitalistic form of government, where powerful Corporations completely took over political and economical life of the society."
 
-EGALITARIAN_ETHIC_ALLOWS_UTOPIA:0 "§ECombination with §HEgalitarian§! allows §HUtopian§! Living Standards§!"
-ELITIST_ETHIC_ALLOWS_STRATIFIED:0 "§ECombination with §HElitist§! allows §HStratified Economy§! Living Standards§!"
-COLLECT_ETHIC_ALLOWS_UTOPIA:0 "§ECombination with §HCooperative§! allows §HUtopian§! Living Standards§!"
-INDIVID_ETHIC_ALLOWS_STRATIFIED:0 "§ECombination with §HCompetitive§! allows §HStratified Economy§! Living Standards§!"
+PLURALIST_ETHIC_ALLOWS_UTOPIA:0 "§ECombination with §HPluralist§! ethics allows §HUtopian§! Living Standards§!"
+ELITIST_ETHIC_ALLOWS_STRATIFIED:0 "§ECombination with §HElitist§! ethics allows §HStratified Economy§! Living Standards§!"
+COLLECT_ETHIC_ALLOWS_UTOPIA:0 "§ECombination with §HCooperative§! ethics allows §HUtopian§! Living Standards§!"
+INDIVID_ETHIC_ALLOWS_STRATIFIED:0 "§ECombination with §HCompetitive§! ethics allows §HStratified Economy§! Living Standards§!"
 
 ETHIC_ALLOWS_UTOPIA:0 "§EAllows §HUtopian§! Living Standards§!"
 ETHIC_ALLOWS_STRATIFIED:0 "§EAllows §HStratified Economy§! Living Standards§!"
