--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -20,8 +20,8 @@
  POP_ATTRACTION_OLIGARCH_GOV_POS:0 "§G+ Oligarchic Government§!"
  POP_ATTRACTION_CONFORMISTS_POS:0 "§G+ Conformists Pops in Empire§!"
  POP_ATTRACTION_DEVIANTS_NEG:0 "§G- Deviants Pops in Empire§!"
- POP_ATTRACTION_EGALITARIAN_POS:0 "§G+ Liberal Governing Ethics§!"
- POP_ATTRACTION_EGALITARIAN_NEG:0 "§R- Liberal Governing Ethics§!"
+ POP_ATTRACTION_EGALITARIAN_POS:0 "§G+ $ethic_egalitarian$ Governing Ethics§!"
+ POP_ATTRACTION_EGALITARIAN_NEG:0 "§R- $ethic_egalitarian$ Governing Ethics§!"
  POP_ATTRACTION_TALENTED_POS:0 "§G+ Talented Pops in Empire§!"
  POP_ATTRACTION_SLOW_LEARN_NEG:0 "§G- Slow Learners Pops in Empire§!"
  POP_ATTRACTION_SLOW_LEARN_POS:0 "§G+ Slow Learners Pops in Empire§!"
@@ -70,13 +70,13 @@ POP_ATTRACTION_QUICK_LEARN_POS:0 "§G+ Quick Learners Pops in Empire§!"
 POP_ATTRACTION_TALENTED_NEG:0 "§R- Talented Pops in Empire§!"
 
 
-mod_pop_ethic_industrial_attraction_mult:0 "Industrialist Ethics Attraction"
-mod_pop_ethic_green_attraction_mult:0 "Ecologist Ethics Attraction"
-mod_pop_ethic_capitalism_attraction_mult:0 "Competitive Ethics Attraction"
-mod_pop_ethic_socialism_attraction_mult:0 "Cooperative Ethics Attraction"
-mod_pop_ethic_elitist_attraction_mult:0 "Elitist Ethics Attraction"
-mod_pop_ethic_pluralist_attraction_mult:0 "Egalitarian Ethics Attraction" 
-mod_pop_ethic_egalitarian_attraction_mult:0 "Liberal Ethics Attraction"
+mod_pop_ethic_industrial_attraction_mult:0 "$ethic_industrial$ Ethics Attraction"
+mod_pop_ethic_green_attraction_mult:0 "$ethic_green$ Ethics Attraction"
+mod_pop_ethic_capitalism_attraction_mult:0 "$ethic_capitalism$ Ethics Attraction"
+mod_pop_ethic_socialism_attraction_mult:0 "$ethic_socialism$ Ethics Attraction"
+mod_pop_ethic_elitist_attraction_mult:0 "$ethic_elitist$ Ethics Attraction"
+mod_pop_ethic_pluralist_attraction_mult:0 "$ethic_pluralist$ Ethics Attraction" 
+mod_pop_ethic_egalitarian_attraction_mult:0 "$ethic_egalitarian$ Ethics Attraction"
 
  BIOSERVANTS_CANNOT_COLONIZE:0 "$TRIGGER_FAIL$ The £society_research£ §Y$tech_tec_bioservant_2$§! technology is required to colonize with Bioservants."
 
