--- a/localisation/english/zz_evolved_tech_l_english.yml
+++ b/localisation/english/zz_evolved_tech_l_english.yml
@@ -40,14 +40,14 @@
  
  tech_set_confederation:0 "Doctrine: Decentralization"
  tech_set_confederation_desc:0 " "
- ETHIC_REBUILD_TECH_UNLOCK_CONFEDERATION_TITLE:0 "§HUnlocks Feature:§! allows an option to decentralize your goverment and transform it into either ''Star Federation' (Liberal) or ''Star Feudalism'' (Authoritarian)."
- ETHIC_REBUILD_TECH_UNLOCK_CONFEDERATION_DESC:0 "§HAllows an option to decentralize your goverment and transform it into either ''Star Federation'' (Liberal) or ''Star Feudalism'' (Authoritarian)."
+ ETHIC_REBUILD_TECH_UNLOCK_CONFEDERATION_TITLE:0 "§HUnlocks Feature:§! allows an option to decentralize your government and transform it into either ''Star Federation' ($ethic_egalitarian$) or ''Star Feudalism'' (Authoritarian)."
+ ETHIC_REBUILD_TECH_UNLOCK_CONFEDERATION_DESC:0 "§HAllows an option to decentralize your government and transform it into either ''Star Federation'' ($ethic_egalitarian$) or ''Star Feudalism'' (Authoritarian)."
  
  
  
  tech_private_armies:0 "Doctrine: Corporate Private Armies"
  tech_private_armies_desc:0 " "
- ETHIC_REBUILD_TECH_UNLOCK_CORP_ARMY_TITLE:0 "§HUnlocks Feature:§! allows an option to chose "Militarized Corporatocracy" as an advanced government form."
+ ETHIC_REBUILD_TECH_UNLOCK_CORP_ARMY_TITLE:0 "§HUnlocks Feature:§! allows an option to chose ''Militarized Corporatocracy'' as an advanced government form."
  ETHIC_REBUILD_TECH_UNLOCK_CORP_ARMY_DESC:0 "§HAllows an option to chose ''Militarized Corporatocracy'' as an advanced government form."
  
  
@@ -64,8 +64,8 @@
  ETHIC_REBUILD_TECH_UNLOCK_CYBER_SOC_DESC:0 "§HAllows an option to chose ''Cybernetic Commonwealth'' as an advanced government form."
  
  
- ETHIC_REBUILD_TECH_UNLOCK_SOC_TITLE:0 "§HUnlocks Feature:§! Fanatic Liberal/Cooperatives get an option to chose ''Anarchist Communism'' as an advanced government form."
- ETHIC_REBUILD_TECH_UNLOCK_SOC_DESC:0 "§HFanatic Liberal/Cooperatives get an option to chose ''Anarchist Communism'' as an advanced government form."
+ ETHIC_REBUILD_TECH_UNLOCK_SOC_TITLE:0 "§HUnlocks Feature:§! Fanatic $ethic_egalitarian$/Cooperatives get an option to chose ''Anarchist Communism'' as an advanced government form."
+ ETHIC_REBUILD_TECH_UNLOCK_SOC_DESC:0 "§HFanatic $ethic_egalitarian$/$ethic_socialism$ get an option to chose ''Anarchist Communism'' as an advanced government form."
  
  
  tech_free_market:0 "Economic Doctrine: Free Market"
